tests/ui/compile-fail/invalid-signature.rs
fn main() {}

#[rye::test]
fn has_input(x: u32) {}

#[rye::test]
fn has_generics<T>() {}
