tests/ui/compile-fail/invalid-signature.stderr
error: test functions cannot accept arguments
 --> $DIR/invalid-signature.rs:4:14
  |
4 | fn has_input(x: u32) {}
  |              ^^^^^^

error: test functions cannot take generic parameters
 --> $DIR/invalid-signature.rs:7:16
  |
7 | fn has_generics<T>() {}
  |                ^^^
